Fix some strange decompile structures